DDCE-1660:Ensure that language toggle does not overlap with green background in reflow scenario

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,3 +56,6 @@ $hmrc-assets-path: "/register-charity-hmrc/assets/lib/hmrc-frontend/hmrc/";
  margin-bottom: -6px;
 }
 
+.govuk-\!-margin-bottom-6 {
+    margin-top: 20px !important;
+}
